# solve_bao_v2

./: .gitignore  Cargo.toml  README.md  formal_rules.md  implementation_checklist.md  pyproject.toml  research_log.md  rules.md
bao/: __init__.py  artifacts.py  native_shards.py  packing.py  reference.py  scc_solver.py  solution_shards.py
benchmarks/: hot_path_expectations.json
docs/: depth_pipeline.md  native_shard_formats.md  optimization_harness.md  rule_test_matrix.md  rulespec_v1.md
native/bao_solver_core/: Cargo.toml
native/bao_solver_core/src/: artifacts.rs  lib.rs  movegen.rs  pack.rs  state.rs  types.rs
tests/: test_artifacts.py  test_native_shards.py  test_reference.py  test_scc_solver.py  test_solution_shards.py
tools/: benchmark_native_binary_export.py  build_binary_graph_slice.py  build_corpus.py  check_native_legal_moves.py  check_native_statekeys.py  check_native_successors.py  export_native_binary_graph_slice.py  export_native_frontier.py  export_native_graph_slice.py  find_examples.py  inspect_native_shard.py  profile_shallow.py  query_native_adjacency.py  query_partial_solution.py  run_depth_pipeline.py  run_native_benchmarks.py  run_native_movegen_benchmarks.py  run_native_shallow_census.py  run_optimization_harness.py  search_extremes.py  solve_slice_partial.py  solve_slice_scc.py  solve_slice_scc_native.py  verify_binary_graph_slice.py  verify_native_adjacency_graph_slice.py  verify_native_binary_graph_slice.py  verify_partial_solution_shard.py
