[package]
name = "bao_solver_core"
version = "0.1.0"
edition = "2021"
description = "Native packed-state primitives for Bao la Kujifunza"

[lib]
name = "bao_solver_core"
path = "src/lib.rs"

[features]
default = []
serde = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
